--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "UNLICENSED",
   "main": "dist/index.js",
   "scripts": {
-    "build": "ncc build src/index.ts -o dist",
-    "build:watch": "npm run build -- -w",
+    "build": "tsup src/index.ts",
+    "build:watch": "npm run build -- --watch",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.19.0",
-    "@vercel/ncc": "^0.38.3",
     "eslint": "^9.33.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.9.2"
   }
 }
