--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "outDir": "./dist"
   }
 }
